# ai-voice-agent-workshop

./: README.md
AVR/: README.md  SETUP.md
AVR/avr-yandex-speechkit-adapter/: Dockerfile  requirements.txt
Asterisk/: README.md
Asterisk-AI-Voice-Agent/: .env.example  CHANGELOG.md  Dockerfile-asterisk  README.md  SETUP.md  docker-compose.gpu.yml  docker-compose.yml  test_openrouter_script.py  testproject-426008-c3646638c2b1.json
Asterisk-AI-Voice-Agent/cli/: README.md
Asterisk-AI-Voice-Agent/config/: ai-agent.local.yaml.bak.20260405_184007  ai-agent.local.yaml.bak.20260405_185132  ai-agent.yaml  (+3 more)
sip-service-poc/: .env.template  .gitignore  .pre-commit-config.yaml  README.md  SETUP.md  check_status.sh  current-extensions.conf  debug-extensions.sh  docker-compose.yml  extensions-addon.conf  fix-russian-queue-messages.sh  load-russian-sounds.sh  requirements-ai-bot.txt  sip-firewall.sh  vad_monitor.py  verify.sh
sip-service-poc/backend/: .dockerignore  Dockerfile  __init__.py  events.py  main.py  pyproject.toml  schemas.py  websocket_manager.py
sip-service-poc/backend/wazo-docker/: .dockerignore  Dockerfile-ai-bot  Dockerfile-bootstrap  Dockerfile-websocketd  README.md  docker-compose.yaml  fix-extensions.sh
sip-service-poc/backend/wazo-docker/etc/: asterisk-agents.conf  asterisk-amqp.conf  asterisk-ari.conf  asterisk-busy-handler.conf  asterisk-cdr.conf  asterisk-extensions.conf  asterisk-indications.conf  asterisk-musiconhold.conf  asterisk-queue-messages.conf  asterisk-queue-russian.conf  asterisk-queues.conf  asterisk-redirect.conf  asterisk-res_odbc.conf  asterisk-rtp.conf  asterisk-say.conf  asterisk-sip-timeouts.conf  asterisk-timeout.conf  asterisk.conf  cdr_adaptive_odbc.conf  modules.conf  nginx.conf  pjsip.conf  pjsip_redirect.conf  wazo-agentd.yml  wazo-agid.yml  wazo-ai-bot.yml  wazo-amid.yml  wazo-auth-cli.yml  wazo-auth.yml  wazo-call-logd.yml  wazo-calld.yml  wazo-chatd.yml  wazo-confd.yml  wazo-confgend.yml  wazo-dird.yml  wazo-ui.yml  wazo-webhookd.yml  xivo-dao.yml
sip-service-poc/backend/wazo-docker/init-db/: ai-bot-integration.sql  queues-setup.sql
sip-service-poc/backend/wazo-docker/speech_to_text/: Dockerfile  main.py
sip-service-poc/backend/wazo-docker/speech_to_text/GigaAM/: .gitignore  pyproject.toml
sip-service-poc/backend/wazo-docker/speech_to_text/GigaAM/gigaam/: __init__.py  decoding.py  encoder.py  model.py  onnx_utils.py  preprocess.py  utils.py  vad_utils.py
sip-service-poc/backend/wazo-docker/speech_to_text/backend/: exception_handler.py  settings.py
sip-service-poc/backend/wazo-docker/speech_to_text/backend/api/: __init__.py
sip-service-poc/backend/wazo-docker/speech_to_text/backend/api/v1/: __init__.py
sip-service-poc/backend/wazo-docker/speech_to_text/backend/api/v1/auth/: constants.py  examples.py  security.py
sip-service-poc/backend/wazo-docker/speech_to_text/backend/api/v1/auth/services/: __init__.py  token_validator.py
sip-service-poc/backend/wazo-docker/speech_to_text/backend/api/v1/speech_recognition/: routes.py
sip-service-poc/backend/wazo-docker/speech_to_text/backend/api/v1/speech_recognition/services/: voice_recognition.py
sip-service-poc/backend/wazo-docker/speech_to_text/backend/config/: __init__.py  config.py
sip-service-poc/backend/wazo-docker/speech_to_text/backend/config/environment/: local.py
sip-service-poc/backend/wazo-docker/speech_to_text/backend/core/: utils.py
sip-service-poc/backend/wazo-docker/speech_to_text/backend/core/constants/: __init__.py  api_response_status.py  application_mode.py  base.py  http_codes_message.py
sip-service-poc/backend/wazo-docker/speech_to_text/backend/core/models/: __init__.py
sip-service-poc/backend/wazo-docker/speech_to_text/frontend/: index.html
sip-service-poc/backend/wazo-docker/speech_to_text/scripts/: entrypoint.sh
(+80 files in other folders)
